Revise content and adjust layout in index.html
Updated text content and improved layout structure.

--- a/index.html
+++ b/index.html
@@ -57,19 +57,24 @@
         <div class="bg-zinc-900/40 p-10 rounded-[40px] border border-zinc-800 backdrop-blur-sm text-center">
             <h2 class="text-3xl font-black uppercase italic mb-6 texto-ouro">O Coração da Quadra 14</h2>
             <p class="text-zinc-300 italic leading-relaxed mb-8">
-                Estamos estrategicamente localizados na Quadra 14 de Sobradinho. Um ponto central, próximo ao Shopping e às principais escolas. Enquanto cuidamos du seu carro com padrão real, você aproveita u que a cidade tem de melhor ao redor.
+                Estamos estrategicamente localizados na Quadra 14 de Sobradinho, <strong>atrás du Sobradinho Shopping</strong>. Enquanto cuidamos du seu carro com padrão real, você aproveita u que a cidade tem de melhor ao redor.
             </p>
             
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 pt-6 border-t border-zinc-800">
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-6 border-t border-zinc-800">
                 <div class="text-center">
                     <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-clock mr-2"></i> Horáriu du Rei</h4>
-                    <p class="text-zinc-400 text-sm italic">Segunda a Sexta: 08:00 às 18:00</p>
-                    <p class="text-zinc-400 text-sm italic">Sábado: 08:00 às 14:00</p>
+                    <p class="text-zinc-400 text-sm italic">Seg a Sáb: 07:30 às 16:30</p>
+                    <p class="text-zinc-400 text-sm italic">Dom: 07:30 às 12:00</p>
                 </div>
                 <div class="text-center">
                     <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-location-dot mr-2"></i> Onde estamus</h4>
                     <p class="text-zinc-400 text-sm italic">Quadra 14, Sobradinho - DF</p>
-                    <p class="text-zinc-500 text-[10px] uppercase">Próximo ao Sobradinho Shopping</p>
+                    <p class="text-zinc-500 text-[10px] uppercase">Atrás du Sobradinho Shopping</p>
+                </div>
+                <div class="text-center">
+                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-bolt mr-2"></i> Atendimentu</h4>
+                    <p class="text-zinc-400 text-sm italic font-bold">Por ordem de chegada</p>
+                    <p class="text-zinc-500 text-[10px] uppercase">Sem precisá agendá</p>
                 </div>
             </div>
         </div>
