--- a/index.html
+++ b/index.html
@@ -49,32 +49,35 @@
 
     <header class="py-20 px-6 text-center">
         <h1 class="text-6xl md:text-8xl font-black uppercase italic mb-4 leading-tight">BRILHO <span class="texto-ouro">DU REI</span></h1>
-        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold mb-8">O melhor de Sobradinho na Quadra 14</p>
+        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold mb-8">O tratamento real na Quadra 14</p>
         <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-10 py-4 rounded-full font-black uppercase text-lg shadow-2xl hover:scale-110 transition inline-block">Falar com u Rei</a>
     </header>
 
-    <section class="py-12 px-6 max-w-4xl mx-auto">
-        <div class="bg-zinc-900/40 p-10 rounded-[40px] border border-zinc-800 backdrop-blur-sm text-center">
-            <h2 class="text-3xl font-black uppercase italic mb-6 texto-ouro">O Coração da Quadra 14</h2>
-            <p class="text-zinc-300 italic leading-relaxed mb-8">
-                Estamos estrategicamente localizados na Quadra 14 de Sobradinho, <strong>atrás du Sobradinho Shopping</strong>. Enquanto cuidamos du seu carro com padrão real, você aproveita u que a cidade tem de melhor ao redor.
+    <section class="py-12 px-6 max-w-5xl mx-auto">
+        <div class="bg-zinc-900/40 p-10 rounded-[40px] border border-zinc-800 backdrop-blur-sm">
+            <h2 class="text-3xl font-black uppercase italic mb-6 texto-ouro text-center">Atrás du Sobradinho Shopping</h2>
+            <p class="text-zinc-300 italic leading-relaxed text-center mb-10">
+                Localização privilegiada na Quadra 14. Enquanto cuidamus du seu veículo, você aproveita a conveniência de estar no centro de tudo.
             </p>
             
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-6 pt-6 border-t border-zinc-800">
-                <div class="text-center">
-                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-clock mr-2"></i> Horáriu du Rei</h4>
-                    <p class="text-zinc-400 text-sm italic">Seg a Sáb: 07:30 às 16:30</p>
-                    <p class="text-zinc-400 text-sm italic">Dom: 07:30 às 12:00</p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center border-t border-zinc-800 pt-10">
+                <div>
+                    <i class="fa-solid fa-clock texto-ouro text-2xl mb-4"></i>
+                    <h4 class="font-black uppercase text-sm tracking-widest">Horáriu du Rei</h4>
+                    <p class="text-zinc-400 text-sm mt-2">Seg a Sáb: 07:30 às 16:30</p>
+                    <p class="text-zinc-400 text-sm">Dom: 07:30 às 12:00</p>
                 </div>
-                <div class="text-center">
-                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-location-dot mr-2"></i> Onde estamus</h4>
-                    <p class="text-zinc-400 text-sm italic">Quadra 14, Sobradinho - DF</p>
-                    <p class="text-zinc-500 text-[10px] uppercase">Atrás du Sobradinho Shopping</p>
+                <div>
+                    <i class="fa-solid fa-map-location-dot texto-ouro text-2xl mb-4"></i>
+                    <h4 class="font-black uppercase text-sm tracking-widest">Localização</h4>
+                    <p class="text-zinc-400 text-sm mt-2">Quadra 14 - Sobradinho DF</p>
+                    <p class="text-zinc-500 text-xs uppercase">Atrás du Sobradinho Shopping</p>
                 </div>
-                <div class="text-center">
-                    <h4 class="texto-ouro font-black uppercase text-sm tracking-widest mb-2"><i class="fa-solid fa-bolt mr-2"></i> Atendimentu</h4>
-                    <p class="text-zinc-400 text-sm italic font-bold">Por ordem de chegada</p>
-                    <p class="text-zinc-500 text-[10px] uppercase">Sem precisá agendá</p>
+                <div>
+                    <i class="fa-solid fa-car-side texto-ouro text-2xl mb-4"></i>
+                    <h4 class="font-black uppercase text-sm tracking-widest">Atendimentu</h4>
+                    <p class="text-white font-bold text-sm mt-2">ORDEM DE CHEGADA</p>
+                    <p class="text-zinc-500 text-xs uppercase">Sem precisá agendá</p>
                 </div>
             </div>
         </div>
@@ -92,7 +95,7 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Vitrificação Real</h3>
-                    <p class="text-zinc-400 text-lg italic">Proteção nanotecnológica que cria uma camada de vidro sobre a pintura, garantindo brilho e repelência por muito mais tempo.</p>
+                    <p class="text-zinc-400 text-lg italic">Proteção nanotecnológica que cria uma camada de vidro sobre a pintura, garantindo brilho por muito mais tempo.</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
@@ -102,9 +105,9 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Polimento de Farol</h3>
-                    <p class="text-zinc-400 text-lg italic">Faróis novos de novo. Removemos u amarelado e devolvemos a total transparência e segurança para sua direção.</p>
+                    <p class="text-zinc-400 text-lg italic">Faróis novos de novo. Removemus u amarelado e devolvemus a transparência original.</p>
                 </div>
-                <img src="https://images.pexels.com/photos/1191145/pexels-photo-1191145.jpeg?auto=compress&cs=tinysrgb&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
+                <img src="https://images.unsplash.com/photo-1549317661-bd32c8ce0db2?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
         </div>
 
@@ -112,7 +115,7 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Higienização</h3>
-                    <p class="text-zinc-400 text-lg italic">Limpeza técnica du interior. Bancos, teto e painel tratados com produtos que eliminam bactérias e renovam u ambiente.</p>
+                    <p class="text-zinc-400 text-lg italic">Limpeza técnica du interior. Bancos e painéis tratados com produtos premium.</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
@@ -122,7 +125,7 @@
             <div class="grid md:grid-cols-2 gap-10 items-center">
                 <div class="space-y-6">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Lavagem Americana</h3>
-                    <p class="text-zinc-400 text-lg italic">U auge du detalhamento automotivo. Limpeza externa profunda usando as melhores ceras e shampoos du mercado.</p>
+                    <p class="text-zinc-400 text-lg italic">U auge du detalhamento. Limpeza profunda usando shampoos du mercado internacional.</p>
                 </div>
                 <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
             </div>
@@ -131,13 +134,13 @@
 
     <section class="py-24 px-6 text-center">
         <a href="https://www.instagram.com/lavajatodurei/" target="_blank">
-            <h2 class="text-7xl md:text-[140px] font-black uppercase italic texto-ouro tracking-tighter leading-none hover:scale-105 transition-transform">RESULTADOS</h2>
-            <p class="text-zinc-500 mt-4 tracking-[10px] uppercase text-xs italic">Clique para ver nosso Instagram</p>
+            <h2 class="text-7xl md:text-[140px] font-black uppercase italic texto-ouro tracking-tighter hover:scale-105 transition-transform">RESULTADOS</h2>
+            <p class="text-zinc-500 mt-4 tracking-[10px] uppercase text-xs italic">Siga nu Instagram</p>
         </a>
     </section>
 
-    <footer class="py-10 text-center opacity-30 border-t border-zinc-900">
-        <p class="text-[10px] font-bold uppercase tracking-[10px]">Sobradinho DF | Quadra 14</p>
+    <footer class="py-10 text-center opacity-30 border-t border-zinc-900 font-bold uppercase tracking-[5px] text-[10px]">
+        Lava Jato Du Rei - Sobradinho DF | Quadra 14
     </footer>
 
     <a href="https://wa.me/5561981704587" class="btn-whatsapp" target="_blank">
