Enhance button styles and service content
Added button with crown effect and updated service descriptions.

--- a/index.html
+++ b/index.html
@@ -15,18 +15,24 @@
         .foto-carro:hover { filter: grayscale(0%); transform: scale(1.02); }
         .marca-dagua { position: fixed; z-index: -1; color: rgba(191, 149, 63, 0.08); pointer-events: none; }
         
-        .aba-servico.ativa {
-            border-color: #bf953f;
-            color: #bf953f;
-            background: rgba(191, 149, 63, 0.1);
+        /* BOTÃO COM EFEITO DE COROA */
+        .btn-rei {
+            position: relative;
+            transition: all 0.3s ease;
+            overflow: hidden;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
         }
-        .conteudo-servico { display: none; }
-        .conteudo-servico.ativo { display: block; animation: fadeIn 0.6s ease-out; }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(15px); }
-            to { opacity: 1; transform: translateY(0); }
+        .btn-rei span { transition: all 0.3s ease; }
+        .btn-rei .coroa-hover {
+            position: absolute;
+            opacity: 0;
+            transform: translateY(20px);
+            font-size: 1.5rem;
         }
+        .btn-rei:hover span { opacity: 0; transform: translateY(-20px); }
+        .btn-rei:hover .coroa-hover { opacity: 1; transform: translateY(0); }
 
         /* EFEITO ROSA NO RESULTADOS */
         .link-resultados:hover h2 {
@@ -34,7 +40,7 @@
             text-shadow: 0 0 20px rgba(255, 0, 127, 0.4);
         }
 
-        /* WHATSAPP VERDE AO PASSAR O MOUSE */
+        /* WHATSAPP VERDE */
         .btn-whatsapp {
             position: fixed; bottom: 30px; right: 30px;
             background: linear-gradient(135deg, #bf953f, #fcf6ba, #aa771c);
@@ -47,8 +53,12 @@
             background: #25D366 !important;
             color: #fff !important;
             transform: scale(1.1) rotate(10deg);
-            box-shadow: 0 0 30px rgba(37, 211, 102, 0.5);
         }
+
+        .aba-servico.ativa { border-color: #bf953f; color: #bf953f; background: rgba(191, 149, 63, 0.1); }
+        .conteudo-servico { display: none; }
+        .conteudo-servico.ativo { display: block; animation: fadeIn 0.6s ease-out; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(15px); } to { opacity: 1; transform: translateY(0); } }
     </style>
 </head>
 <body>
@@ -57,22 +67,24 @@
 
     <nav class="p-6 border-b border-zinc-900 flex justify-between items-center bg-black/95 sticky top-0 z-50">
         <div class="font-black italic text-xl uppercase tracking-tighter">👑 LAVA JATO <span class="texto-ouro">DU REI</span></div>
-        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-6 py-2 rounded-full font-black uppercase text-xs">Falar com u Rei</a>
+        <a href="https://wa.me/5561981704587" class="btn-rei fundo-ouro text-black px-6 py-2 rounded-full font-black uppercase text-xs">
+            <span>Falar com u Rei</span>
+            <div class="coroa-hover">👑</div>
+        </a>
     </nav>
 
     <header class="py-20 px-6 text-center">
         <h1 class="text-6xl md:text-8xl font-black uppercase italic mb-4 leading-tight">BRILHO <span class="texto-ouro">DU REI</span></h1>
-        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold mb-8">O tratamento real na Quadra 14</p>
-        <a href="https://wa.me/5561981704587" class="fundo-ouro text-black px-10 py-4 rounded-full font-black uppercase text-lg shadow-2xl hover:scale-110 transition inline-block">Falar com u Rei</a>
+        <p class="text-zinc-400 text-lg italic uppercase tracking-widest font-bold mb-8">O melhor de Sobradinho na Quadra 14</p>
+        <a href="https://wa.me/5561981704587" class="btn-rei fundo-ouro text-black px-10 py-4 rounded-full font-black uppercase text-lg shadow-2xl hover:scale-110 transition inline-flex">
+            <span>Falar com u Rei</span>
+            <div class="coroa-hover">👑</div>
+        </a>
     </header>
 
     <section class="py-12 px-6 max-w-5xl mx-auto">
         <div class="bg-zinc-900/40 p-10 rounded-[40px] border border-zinc-800 backdrop-blur-sm">
             <h2 class="text-3xl font-black uppercase italic mb-6 texto-ouro text-center">Atrás du Sobradinho Shopping</h2>
-            <p class="text-zinc-300 italic leading-relaxed text-center mb-10">
-                Localização privilegiada na Quadra 14. Enquanto cuidamus du seu veículo, você aproveita a conveniência de estar no centro de tudo.
-            </p>
-            
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center border-t border-zinc-800 pt-10">
                 <div>
                     <i class="fa-solid fa-clock texto-ouro text-2xl mb-4"></i>
@@ -106,41 +118,41 @@
 
         <div id="vitrificacao" class="conteudo-servico ativo">
             <div class="grid md:grid-cols-2 gap-10 items-center">
-                <div class="space-y-6">
+                <div class="space-y-6 text-center md:text-left">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Vitrificação Real</h3>
-                    <p class="text-zinc-400 text-lg italic">Proteção nanotecnológica que cria uma camada de vidro sobre a pintura.</p>
+                    <p class="text-zinc-400">Proteção nanotecnológica definitiva.</p>
                 </div>
-                <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
+                <img src="https://images.unsplash.com/photo-1607860108855-64acf2078ed9?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 foto-carro w-full h-80">
             </div>
         </div>
 
         <div id="polimento" class="conteudo-servico">
             <div class="grid md:grid-cols-2 gap-10 items-center">
-                <div class="space-y-6">
-                    <h3 class="text-4xl font-black texto-ouro uppercase italic">Polimento de Farol</h3>
-                    <p class="text-zinc-400 text-lg italic">Faróis novos de novo. Removemus u amarelado e devolvemus a transparência original.</p>
+                <div class="space-y-6 text-center md:text-left">
+                    <h3 class="text-4xl font-black texto-ouro uppercase italic">Polimento Farol</h3>
+                    <p class="text-zinc-400">Remoção de amarelado e brilho original.</p>
                 </div>
-                <img src="https://images.unsplash.com/photo-1549317661-bd32c8ce0db2?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
+                <img src="https://images.unsplash.com/photo-1549317661-bd32c8ce0db2?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 foto-carro w-full h-80">
             </div>
         </div>
 
         <div id="higienizacao" class="conteudo-servico">
             <div class="grid md:grid-cols-2 gap-10 items-center">
-                <div class="space-y-6">
+                <div class="space-y-6 text-center md:text-left">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Higienização</h3>
-                    <p class="text-zinc-400 text-lg italic">Limpeza técnica du interior. Bancos e painéis tratados com produtos premium.</p>
+                    <p class="text-zinc-400">Limpeza profunda du interior.</p>
                 </div>
-                <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
+                <img src="https://images.unsplash.com/photo-1583121274602-3e2820c69888?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 foto-carro w-full h-80">
             </div>
         </div>
 
         <div id="lavagem" class="conteudo-servico">
             <div class="grid md:grid-cols-2 gap-10 items-center">
-                <div class="space-y-6">
+                <div class="space-y-6 text-center md:text-left">
                     <h3 class="text-4xl font-black texto-ouro uppercase italic">Lavagem Americana</h3>
-                    <p class="text-zinc-400 text-lg italic">U auge du detalhamento. Limpeza profunda usando shampoos du mercado.</p>
+                    <p class="text-zinc-400">Cuidado minucioso em cada detalhe.</p>
                 </div>
-                <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 shadow-2xl foto-carro w-full h-80">
+                <img src="https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=800" class="rounded-[40px] border border-zinc-800 foto-carro w-full h-80">
             </div>
         </div>
     </section>
